k8s/client-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-pod
spec:
  replicas: 2
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: client-container
          image: abdihakim3541/yolo:1.0.2
          workingDir: /usr/src/app/client
          command: ["npm", "start"]
          ports:
            - containerPort: 3000
