k8s/mongodb-statefulset.yml
apiVersion: apps/v1    
kind: StatefulSet
metadata:
  name: mongodb
spec:
  serviceName: "mongodb-service"
  replicas: 2
  selector:
    matchLabels:
      role: mongo
      component: database
  template:
    metadata:
      labels:
        role: mongo
        component: database
    spec:
      containers:
        - name: mongodb-container
          image: mongo:latest
          command:
            - mongod
            - "--replSet"
            - rs0
            - "--bind_ip_all"
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-persistent-storage
              mountPath: /data/db
  volumeClaimTemplates:
      - metadata:
          name: mongo-persistent-storage
        spec:
          storageClassName: "storage-class"
          accessModes: ["ReadWriteOnce"]
          resources:
            requests:
              storage: 10Gi
