k8s/client-service.yml
apiVersion: v1
kind: Service
metadata:
  name: client-service
  annotations: 
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: LoadBalancer
  selector:
    component: web
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
